2007-06-09  Yevgen Muntyan  <muntyan@tamu.edu>

	* docs/reference/gtksourceview-sections.txt:
	* docs/reference/tmpl/languagemanager.sgml:
	* docs/reference/tmpl/style.sgml:
	* docs/reference/tmpl/gtksourceview-unused.sgml:
	* docs/reference/tmpl/language.sgml:
	* docs/reference/tmpl/stylescheme.sgml:
	* docs/reference/tmpl/stylemanager.sgml:
	* gtksourceview/gtksourcestyle.c:

	Little more docs.

2007-06-09  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcelanguage.c: (_gtk_source_language_new_from_file):
	add weak reference to the language manager; (gtk_source_language_dispose):
	drop it here; (_gtk_source_language_create_engine): fail if language
	manager died.

2007-06-08  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/gtksourcestylescheme.c: Added secondary-cursor
	and line-numbers styles; made cursor-color styles work in gtk < 2.11.3
	using widget name and rc string trick.
	* docs/reference/tmpl/stylescheme.sgml: documented new styles.
	* gtksourceview/language-specs/testdark.styles: test theme, with black
	background and yellow line numbers.

2007-06-08  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/pkgconfig.lang: highlight variables
	containing dot (e.g. "Requires.private").

2007-06-05  Yevgen Muntyan  <muntyan@tamu.edu>

	* docs/reference/tmpl/stylescheme.sgml: added some docs about style
	scheme files.
	* gtksourceview/regex/glib/gregex.c: synced with Glib.
	* gtksourceview/gtksourcelanguagemanager.c (gtk_source_language_manager_init):
	do not allocate (and leak) GtkSourceLanguageManagerPrivate structure.

2007-06-02  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/ocaml.lang: Port the ocaml.lang
	file to the new syntax. Patch by thelema@swbell.net.

2007-06-02  Paolo Borelli  <pborelli@katamail.com>

	* gtksourceview/language-specs/perl.lang: highlight operators.
	Bug #403915.

2007-06-02  Yevgen Muntyan  <muntyan@tamu.edu>
